--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  padding: 10px;
+  background-color: black;
+}
+h1{
+  color: rgb(255, 157, 0);
+}
+li{
+  display: inline-block;
+  list-style-type: none;
+  padding: 10px 100px; 
+}
+Link{
+  text-decoration: none;
+}
+button{
+  width: 120px;
+  background-color: lightseagreen;
   color: white;
-}
+  padding: 8px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: .2s;
+  font-weight: bold;
+  font-size: 16px;
+  border: none;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+  background-color: rgb(105, 206, 105);
+  font-size: 12px;
 }
+.main{
+  height: 100vh;
+  background: linear-gradient(red,yellow,blue);
+}
+/* .activelink{
+  background-color: rgb(255, 157, 0);
+} */
